--- a/Win Fitness/fr.lproj/Localizable.strings
+++ b/Win Fitness/fr.lproj/Localizable.strings
@@ -9,3 +9,4 @@
 "PULL TO REFRESH" = "Tirer pour rafraîchir";
 "NEWS" = "Actualités Facebook";
 "BACK" = "Retour";
+"NO DESCRIPTION" = "Pas de description";
