--- a/Win Fitness/en.lproj/Localizable.strings
+++ b/Win Fitness/en.lproj/Localizable.strings
@@ -10,3 +10,6 @@
 "NEWS" = "Facebook News";
 "BACK" = "Back";
 "NO DESCRIPTION" = "No description";
+"WIN FITNESS HAS SHARED PUBLICATION OF" = "Win Fitness has shared the publication of";
+"WIN FITNESS HAS SHARED THE EVENT OF" = "Win Fitness has shared the event of";
+"WIN FITNESS HAS ADDED" = "Win Fitness has added";
