--- a/Win Fitness/fr.lproj/Localizable.strings
+++ b/Win Fitness/fr.lproj/Localizable.strings
@@ -10,3 +10,6 @@
 "NEWS" = "Actualités Facebook";
 "BACK" = "Retour";
 "NO DESCRIPTION" = "Pas de description";
+"WIN FITNESS HAS SHARED THE PUBLICATION OF" = "Win Fitness a partagé la publication de";
+"WIN FITNESS HAS SHARED THE EVENT OF" = "Win Fitness a partagé l'évènement de";
+"WIN FITNESS HAS ADDED" = "Win Fitness a ajouté";
