--- a/Win Fitness/en.lproj/Localizable.strings
+++ b/Win Fitness/en.lproj/Localizable.strings
@@ -11,6 +11,6 @@
 "NEWS" = "Facebook News";
 "BACK" = "Back";
 "NO DESCRIPTION" = "No description";
-"WIN FITNESS HAS SHARED THE PUBLICATION O" = "WinFitness has shared the publication of";
+"WIN FITNESS HAS SHARED THE PUBLICATION OF" = "WinFitness has shared the publication of";
 "WIN FITNESS HAS SHARED THE EVENT OF" = "WinFitness has shared the event of";
 "WIN FITNESS HAS ADDED" = "WinFitness has added";
