--- a/Win Fitness/fr.lproj/Localizable.strings
+++ b/Win Fitness/fr.lproj/Localizable.strings
@@ -11,6 +11,7 @@
 "NEWS" = "Actualités Facebook";
 "BACK" = "Retour";
 "NO DESCRIPTION" = "Pas de description";
+"MORE INFORMATIONS" = "Plus d'informations : ";
 "WIN FITNESS HAS SHARED THE PUBLICATION OF" = "WinFitness a partagé la publication de";
 "WIN FITNESS HAS SHARED THE EVENT OF" = "WinFitness a partagé l'évènement de";
 "WIN FITNESS HAS ADDED" = "WinFitness a ajouté";
