--- a/Win Fitness/fr.lproj/Localizable.strings
+++ b/Win Fitness/fr.lproj/Localizable.strings
@@ -15,3 +15,9 @@
 "WIN FITNESS HAS SHARED THE PUBLICATION OF" = "WinFitness a partagé la publication de";
 "WIN FITNESS HAS SHARED THE EVENT OF" = "WinFitness a partagé l'évènement de";
 "WIN FITNESS HAS ADDED" = "WinFitness a ajouté";
+"OK" = "OK";
+
+//ERRORS
+
+"ERROR" = "Erreur";
+"COULD NOT OPEN URL" = "Impossible d'ouvrir la page";
