--- a/Win Fitness/fr.lproj/Localizable.strings
+++ b/Win Fitness/fr.lproj/Localizable.strings
@@ -21,3 +21,4 @@
 
 "ERROR" = "Erreur";
 "COULD NOT OPEN URL" = "Impossible d'ouvrir la page";
+"COULD NOT DOWNLOAD FACEBOOK NEWS" = "Impossible de télécharger les news de Facebook";
