--- a/Win Fitness/Base.lproj/Localizable.strings
+++ b/Win Fitness/Base.lproj/Localizable.strings
@@ -21,3 +21,5 @@
 
 "ERROR" = "Error";
 "COULD NOT OPEN URL" = "Couldn't open URL";
+"COULD NOT DOWNLOAD FACEBOOK NEWS" = "Couldn't download Facebook news";
+
