Set new sessions controller

--- a/Win Fitness/fr.lproj/Localizable.strings
+++ b/Win Fitness/fr.lproj/Localizable.strings
@@ -9,6 +9,7 @@
 "WINFITNESS" = "WinFitness";
 "PULL TO REFRESH" = "Tirer pour rafraîchir";
 "NEWS" = "Actualités Facebook";
+"SESSIONS" = "Sessions";
 "BACK" = "Retour";
 "NO DESCRIPTION" = "Pas de description";
 "MORE INFORMATIONS" = "Plus d'informations : ";
