--- a/Win Fitness/Base.lproj/Localizable.strings
+++ b/Win Fitness/Base.lproj/Localizable.strings
@@ -9,6 +9,7 @@
 "WINFITNESS" = "WinFitness";
 "PULL TO REFRESH" = "Pull to refresh";
 "NEWS" = "Facebook News";
+"SESSIONS" = "Sessions";
 "BACK" = "Back";
 "NO DESCRIPTION" = "No description";
 "MORE INFORMATIONS" = "More details : ";
