Add UI for week cells sessions

--- a/Win Fitness/en.lproj/Localizable.strings
+++ b/Win Fitness/en.lproj/Localizable.strings
@@ -23,6 +23,8 @@
 "THURSDAY" = "Thursday";
 "FRIDAY" = "Friday";
 "SATURDAY" = "Saturday";
+"PLANING MAY CHANGE" = "Planing may change";
+
 //ERRORS
 
 "EMPTY" = "Empty";
