--- a/Win Fitness/fr.lproj/Localizable.strings
+++ b/Win Fitness/fr.lproj/Localizable.strings
@@ -23,6 +23,7 @@
 "THURSDAY" = "Jeudi";
 "FRIDAY" = "Vendredi";
 "SATURDAY" = "Samedi";
+"PLANING MAY CHANGE" = "Le planing peut faire l'objet de modifications afin d'améliorer le service";
 
 //ERRORS
 
