--- a/Win Fitness/Base.lproj/Localizable.strings
+++ b/Win Fitness/Base.lproj/Localizable.strings
@@ -23,6 +23,7 @@
 "THURSDAY" = "Thursday";
 "FRIDAY" = "Friday";
 "SATURDAY" = "Saturday";
+"PLANING MAY CHANGE" = "Planing may change";
 
 //ERRORS
 
