Optimization parking sports + TODO fix check first sport

--- a/Win Fitness/Base.lproj/Localizable.strings
+++ b/Win Fitness/Base.lproj/Localizable.strings
@@ -24,6 +24,7 @@
 "FRIDAY" = "Friday";
 "SATURDAY" = "Saturday";
 "PLANING MAY CHANGE" = "Planing may change";
+"EXPLORER" = "EXPLORER";
 
 //ERRORS
 
