--- a/Win Fitness/fr.lproj/Localizable.strings
+++ b/Win Fitness/fr.lproj/Localizable.strings
@@ -24,6 +24,7 @@
 "FRIDAY" = "Vendredi";
 "SATURDAY" = "Samedi";
 "PLANING MAY CHANGE" = "Le planing peut faire l'objet de modifications afin d'améliorer le service";
+"EXPLORER" = "EXPLORER";
 
 //ERRORS
 
