--- a/Win Fitness/en.lproj/Localizable.strings
+++ b/Win Fitness/en.lproj/Localizable.strings
@@ -28,7 +28,7 @@
 
 //ERRORS
 
-"EMPTY" = "Empty";
+"EMPTY" = "";
 "ERROR" = "Error";
 "COULD NOT OPEN URL" = "Couldn't open URL";
 "COULD NOT DOWNLOAD FACEBOOK NEWS" = "Couldn't download Facebook news";
