Store sports parsing in Singleton

--- a/Win Fitness/Base.lproj/Localizable.strings
+++ b/Win Fitness/Base.lproj/Localizable.strings
@@ -25,6 +25,8 @@
 "SATURDAY" = "Saturday";
 "PLANING MAY CHANGE" = "Planing may change";
 "EXPLORER" = "EXPLORER";
+"SPORTS" = "Sports";
+"ACTIVITIES" = "Cours";
 
 //ERRORS
 
