--- a/Win Fitness/en.lproj/Localizable.strings
+++ b/Win Fitness/en.lproj/Localizable.strings
@@ -25,6 +25,7 @@
 "SATURDAY" = "Saturday";
 "PLANING MAY CHANGE" = "Planing may change";
 "EXPLORER" = "EXPLORER";
+"ACTIVITIES" = "Cours";
 
 //ERRORS
 
