--- a/Win Fitness/fr.lproj/Localizable.strings
+++ b/Win Fitness/fr.lproj/Localizable.strings
@@ -25,6 +25,7 @@
 "SATURDAY" = "Samedi";
 "PLANING MAY CHANGE" = "Le planing peut faire l'objet de modifications afin d'améliorer le service";
 "EXPLORER" = "EXPLORER";
+"ACTIVITIES" = "Cours";
 
 //ERRORS
 
