--- a/Win Fitness/Base.lproj/Localizable.strings
+++ b/Win Fitness/Base.lproj/Localizable.strings
@@ -6,27 +6,37 @@
   Copyright © 2017 julien gimenez. All rights reserved.
 */
 
+//Name
 "WINFITNESS" = "WinFitness";
+
+//Actions
 "PULL TO REFRESH" = "Pull to refresh";
-"NEWS" = "Facebook News";
-"SESSIONS" = "Sessions";
 "BACK" = "Back";
+"OK" = "OK";
+
+//TabBar
+"NEWS" = "News";
+"SESSIONS" = "Calendar";
+"ACTIVITIES" = "Cours";
+"INFORMATIONS" = "Informations";
+
 "NO DESCRIPTION" = "No description";
 "MORE INFORMATIONS" = "More details : ";
 "WIN FITNESS HAS SHARED THE PUBLICATION OF" = "WinFitness has shared the publication of";
 "WIN FITNESS HAS SHARED THE EVENT OF" = "WinFitness has shared the event of";
 "WIN FITNESS HAS ADDED" = "WinFitness has added";
-"OK" = "OK";
+
+//Days
 "MONDAY" = "Monday";
 "TUESDAY" = "Tuesday";
 "WEDNESDAY" = "Wednesday";
 "THURSDAY" = "Thursday";
 "FRIDAY" = "Friday";
 "SATURDAY" = "Saturday";
+
 "PLANING MAY CHANGE" = "Planing may change";
 "EXPLORER" = "EXPLORER";
 "SPORTS" = "Sports";
-"ACTIVITIES" = "Cours";
 
 //ERRORS
 
@@ -34,4 +44,3 @@
 "ERROR" = "Error";
 "COULD NOT OPEN URL" = "Couldn't open URL";
 "COULD NOT DOWNLOAD FACEBOOK NEWS" = "Couldn't download Facebook news";
-
